# c-template

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: helloworld.c  helloworld.h  main.c  main.h
tests/: test_helloworld.c
